Cambio en la gestión de conexiones a BD
- Se modifica la gestión de conexiones a base de datos para, en lugar de tener una conexión que se reaprovecha continuamente, crear y cerrar una conexión por cada petición.